<resources>
    <string name="app_name">TerraTani</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in">Log in to continue</string>
    <string name="sign_up">Register to continue</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="title_plant">Lorem Ipsum</string>
    <string name="description_plant">Lorem Ipsum</string>
    <string name="cara_agar_tanaman_subur">Cara Agar Tanaman Subur</string>
    <string name="scan_tanah">Scan Tanah</string>
    <string name="search">Search</string>
    <string name="halo">Halo,</string>
    <string name="sample_username">Adhim Bin Oban</string>
    <string name="all">All</string>
    <string name="bigplants">Big Plants</string>
    <string name="indoor">Indoor</string>
    <string name="outdoor">Outdoor</string>
    <string name="rawat_tanamanmu">Rawat Tanamanmu</string>
    <string name="maintenance_text">Yuk, pelajari cara rawat tanamanmu lewat tutorial</string>
    <string name="features_text">Yang Baru di TerraTani</string>
    <string name="features_description_text">Jangan ngaku update kalo belum nyobaiin fitur ini!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bibit_unggul_pohon_cabe">Bibit Unggul Pohon Cabe</string>
    <string name="price">Rp2.000.500</string>
    <string name="city">Kota Bandung</string>
    <string name="category">Kategori</string>
    <string name="tanaman_panen">Tanaman Panen</string>
    <string name="tanaman_hias">Tanaman Hias</string>
    <string name="sewa_tanah">Sewa Tanah</string>
    <string name="jual_tanah">Jual Tanah</string>
    <string name="ada_yang_baru_nih">Ada Yang Baru, Nih!</string>
    <string name="detail_produk">Detail Produk</string>
    <string name="info">!! SEBELUM MEMBELI MOHON BACA INFO PENTING TERLEBIH DAHULU !!</string>
    <string name="deskripsi_produk">Tanaman Sansiver atau lebih dikenal dengan nama Lidah Mertua ini tidak hanya menebar pesona karena...</string>
    <string name="kondisi">Kondisi</string>
    <string name="kondisi_baru_bekas">Baru</string>
    <string name="min_pemesanan">Min. Pemesanan</string>
    <string name="nominal_pemesanan">1 Buah</string>
    <string name="etalase">Etalase</string>
    <string name="etalase_description">Bibit Unggul</string>
    <string name="store">Toko Adhim Jaya Abadi</string>
    <string name="status_store">Online</string>
    <string name="status_online">1 Jam yang lalu</string>
    <string name="store_city">Kota Bekasi</string>
    <string name="ikuti">Ikuti</string>
    <string name="or">Or</string>
    <string name="history">Riwayat</string>
    <string name="jenis_tanah">Jenis Tanah</string>
    <string name="andisol">Andisol</string>
    <string name="tanaman_yang_cocok">Tanaman yang cocok:</string>
    <string name="pohon_cabai">Pohon Cabai</string>
    <string name="adhim_bin_oban">Adhim Bin Oban</string>
    <string name="petani">Petani Cabai Bogor</string>
    <string name="followers">Followers</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="settings">Settings</string>
    <string name="change_email_address">Change Email Address</string>
    <string name="logout">Logout</string>
    <string name="weather">Cerah</string>
    <string name="celcius">35</string>
    <string name="clock">10:15</string>
    <string name="date">Senin, 24 Juni</string>
    <string name="city_weather">Jakarta</string>
    <string name="name">Name</string>
    <string name="login_with_google_account">Login with Google Account</string>
    <string name="this_is_our_next_features">This is our next features!</string>
    <string name="stay_tuned">Stay Tuned!</string>
    <string name="beli_tanah">Beli Tanah</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="change_email">Change Email</string>
    <string name="input_your_password">Input Your Password</string>
    <string name="next">Next</string>
    <string name="input_your_new_email">Input Your New Email</string>
    <string name="current_password">Masukkan Password Lama Anda</string>
    <string name="ganti_password">Ganti Password</string>
    <string name="new_password">Masukkan Password Baru Anda</string>
    <string name="confirm_password">Konfirmasi Password Anda</string>
    <string name="ganti_email">Ganti Email</string>
    <string name="new_email">Masukkan Email Baru Anda</string>
    <string name="masukkan_nitrogen">Masukkan Nitrogen</string>
    <string name="nitrogen">Nitrogen</string>
    <string name="phosporus">Phosporus</string>
    <string name="masukkan_phosporus">Masukkan Phosporus</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="ph">PH</string>
    <string name="rainfall">Rainfall</string>
    <string name="moisture">Moisture</string>
    <string name="crop_type">Crop Type</string>
    <string name="year">Year</string>
    <string name="instruction">Anda bisa mengambil gambar dari kamera atau galeri</string>
    <string name="prediksi">Prediksi</string>
    <string name="galeri">Galeri</string>
    <string name="kamera">Kamera</string>
    <string name="selesai">Selesai</string>
    <string name="hasil">Hasil</string>
    <string name="rekomendasi_pupuk">Rekomendasi Pupuk:</string>
    <string name="prediksi_panen">Prediksi Panen:</string>
    <string name="rekomendasi_tanaman">Rekomendasi Tanaman</string>
</resources>