<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.ShopFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_blank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/rv_blank"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_tanaman_panen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/green_master"
        android:text="@string/tanaman_panen"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_category"
        app:layout_constraintStart_toStartOf="@id/tv_category"/>

    <TextView
        android:id="@+id/tv_tanaman_hias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tanaman_hias"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_category"
        app:layout_constraintStart_toEndOf="@id/tv_tanaman_panen"/>

    <TextView
        android:id="@+id/tv_beli_tanah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sewa_tanah"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_category"
        app:layout_constraintStart_toEndOf="@id/tv_tanaman_hias"/>

    <TextView
        android:id="@+id/tv_jual_tanah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jual_tanah"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_category"
        app:layout_constraintStart_toEndOf="@id/tv_beli_tanah"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/tv_tanaman_panen"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ada_yang_baru_nih"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/rv_category"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_new"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>